<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_backgroud"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/iv_banner"
                    android:contentDescription="@string/app_name" />
                <!-- 第一行 -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/iv_picture01"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/text_content01"
                        android:textColor="@color/text_deep"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_ask_for_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tv_clicked_selector"
                        android:paddingBottom="4dp"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:paddingTop="4dp"
                        android:text="@string/tv_ask_for"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.6dp"
                    android:background="@color/text_line" />
                <!-- 第二行 -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/iv_picture02"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/text_content02"
                        android:textColor="@color/text_deep"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_ask_for_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tv_clicked_selector"
                        android:paddingBottom="4dp"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:paddingTop="4dp"
                        android:text="@string/tv_ask_for"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.6dp"
                    android:background="@color/text_line" />
                <!-- 第三行 -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/iv_picture03"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/text_content03"
                        android:textColor="@color/text_deep"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_ask_for_third"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tv_clicked_selector"
                        android:paddingBottom="4dp"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:paddingTop="4dp"
                        android:text="@string/tv_ask_for"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.6dp"
                    android:background="@color/text_line" />
                <!-- 第四行 -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/iv_picture04"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/text_content04"
                        android:textColor="@color/text_deep"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_ask_for_fourth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tv_clicked_selector"
                        android:paddingBottom="4dp"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:paddingTop="4dp"
                        android:text="@string/tv_ask_for"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.6dp"
                    android:background="@color/text_line" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <!-- 第五行 -->

    <LinearLayout
        android:id="@+id/ll_ask_for_now"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/title_backgroud"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingTop="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ask_for_now"
            android:textColor="@drawable/tv_clicked_text_selector"
            android:textSize="15sp" />
    </LinearLayout>

</FrameLayout>